# COS-214-Project---NJD-Films

./: CMakeLists.txt  Doxyfile  Makefile  NJDFilms_COS214_Presentation.pptx  README.md  greenhouse_simulation.cpp  main.cpp
Adapter - Legacy Watering System/: GreenhouseController.cpp  GreenhouseController.h  LegacyIrrigationSystem.cpp  LegacyIrrigationSystem.h  ModernWateringSystem.h  WateringAdapter.cpp  WateringAdapter.h
Builder - Plant Bundle Creator/: ArrangementDirector.cpp  ArrangementDirector.h  GiftArrangementBuilder.cpp  GiftArrangementBuilder.h  LandscapeArrangementBuilder.cpp  LandscapeArrangementBuilder.h  PlantArrangement.h  PlantArrangementBuilder.cpp  PlantArrangementBuilder.h  Testing-builder.cpp
Command - Staff Functions/: AssistCustomerCommand.h  FertilizePlantsCommand.h  PlantCareStaff.h  PrunePlantsCommand.h  SalesStaff.h  StaffCommand.h  StaffMember.h  TaskScheduler.cpp  TaskScheduler.h  WaterPlantsCommand.cpp  WaterPlantsCommand.h
Composite - The Store layout/: Greenhouse.h  GreenhouseComponent.h  GreenhouseSection.cpp  GreenhouseSection.h  PlantLeaf.cpp  PlantLeaf.h  Shelf.h
Decorator - Plant Decoration/: BasicPlant.cpp  BasicPlant.h  DecorativePotDecorator.cpp  DecorativePotDecorator.h  DecoratorTesting.cpp  GiftWrappingDecorator.cpp  GiftWrappingDecorator.h  GreetingCardDecorator.h  PlantDecorator.cpp  PlantDecorator.h  PlantProduct.cpp  PlantProduct.h
Documents/docs/html/: ArrangementDirector_8cpp.html  ArrangementDirector_8cpp_source.html  ArrangementDirector_8h.html  ArrangementDirector_8h_source.html  AssistCustomerCommand_8cpp.html  AssistCustomerCommand_8h.html  AssistCustomerCommand_8h_source.html  BaobabFactory_8cpp_source.html  BaobabFactory_8h.html  Baobab_8h.html  BasicPlant_8h.html  CactusFactory_8h_source.html  Cactus_8h_source.html  DecorativePotDecorator_8cpp.html  (+1275 more)
Factory - Plant Creation/: BaobabFactory.cpp  BaobabFactory.h  CactusFactory.cpp  CactusFactory.h  LavenderFactory.h  PlantFactory.h  RoseFactory.cpp  RoseFactory.h  SucculentFactory.h
Iterator - Inventory Management/: GreenhouseInventory.cpp  GreenhouseInventory.h  InventoryIterator.h  InventoryManager.cpp  InventoryManager.h  PlantCollection.h  PlantIterator.h
Plant - Abstract Base/: Baobab.h  Cactus.h  Lavendar.h  Plant.cpp  Plant.h  Rose.h  Succulent.h
Prototype - Plant Propogation/: NurseryManager.cpp  NurseryManager.h  PlantPrototype.h  RosePrototype.cpp  RosePrototype.h  SucculentPrototype.cpp  SucculentPrototype.h  readme.txt
State - Plant lifecycle/: COS-214-Project---NJD-Films.code-workspace  DormantState.h  FloweringState.h  GrowingState.h  MatureState.h  PlantContext.h  PlantState.h  SeedlingState.h  readme
Strategy - Watering Methods/: FrequentWatering.cpp  FrequentWatering.h  MinimalWatering .h  MinimalWatering.cpp  ModerateWatering.cpp  ModerateWatering.h  PlantCareContext.cpp  PlantCareContext.h  PlantCareStrategy.h
SystemFiles/: CMakeLists.txt  Doxyfile  greenhouse_simulation.cpp  main.cpp
SystemFiles/.claude/: settings.local.json
SystemFiles/Adapter - Legacy Watering System/: GreenhouseController.cpp  WateringAdapter.cpp
SystemFiles/Builder - Plant Bundle Creator/: GiftArrangementBuilder.h  LandscapeArrangementBuilder.h  PlantArrangement.cpp
SystemFiles/Command - Staff Functions/: AssistCustomerCommand.cpp  AssistCustomerCommand.h  FertilizePlantsCommand.cpp  FertilizePlantsCommand.h  PlantCareStaff.cpp  PlantCareStaff.h  PrunePlantsCommand.cpp  PrunePlantsCommand.h  SalesStaff.cpp  SalesStaff.h  StaffCommand.h  StaffMember.cpp  WaterPlantsCommand.h
SystemFiles/Composite - The Store layout/: Greenhouse.cpp  Greenhouse.h  GreenhouseComponent.cpp  GreenhouseComponent.h  GreenhouseSection.h  Shelf.cpp
SystemFiles/Decorator - Plant Decoration/: DecorativePotDecorator.h  GreetingCardDecorator.cpp  PlantDecorator.h
SystemFiles/Factory - Plant Creation/: BaobabFactory.h  CactusFactory.h  LavenderFactory.cpp  PlantFactory.h  SucculentFactory.cpp  SucculentFactory.h
SystemFiles/Iterator - Inventory Management/: GreenhouseInventory.h  InventoryIterator.cpp  InventoryIterator.h  InventoryManager.h
SystemFiles/Plant - Abstract Base/: Cactus.h  Succulent.h
SystemFiles/Prototype - Plant Propogation/: NurseryManager.h  PlantPrototype.cpp  RosePrototype.h  SucculentPrototype.h
SystemFiles/State - Plant lifecycle/: DormantState.cpp  DormantState.h  FloweringState.cpp  GrowingState.cpp  GrowingState.h  MatureState.cpp  MatureState.h  PlantContext.h  PlantState.cpp  PlantState.h  SeedlingState.cpp
SystemFiles/Strategy - Watering Methods/: FrequentWatering.cpp  FrequentWatering.h  MinimalWatering .h  MinimalWatering.cpp  ModerateWatering.h  PlantCareContext.cpp  PlantCareStrategy.h
Template- Plant Care/: PlantCareRoutine.cpp  PlantCareRoutine.h  RoseCare.cpp  RoseCare.h  SucculentCare.cpp  SucculentCare.h  TreeCare.cpp  TreeCare.h
docs/html/: BaobabFactory_8cpp.html  BaobabFactory_8h_source.html  Baobab_8h_source.html  BasicPlant_8cpp.html  BasicPlant_8cpp_source.html  CactusFactory_8cpp.html  CactusFactory_8h.html  Cactus_8h.html  DormantState_8h.html  DormantState_8h_source.html  FertilizePlantsCommand_8cpp.html  FertilizePlantsCommand_8h_source.html  FloweringState_8cpp.html  FloweringState_8cpp_source.html  FloweringState_8h.html  FloweringState_8h_source.html  FrequentWatering_8cpp.html  FrequentWatering_8cpp_source.html  GiftArrangementBuilder_8cpp_source.html  GiftArrangementBuilder_8h_source.html  GiftWrappingDecorator_8cpp_source.html  GreenhouseComponent_8cpp.html  GreenhouseInventory_8cpp.html  GreenhouseInventory_8cpp_source.html  GreenhouseInventory_8h.html  GreenhouseInventory_8h_source.html  GreenhouseSection_8cpp.html  GreenhouseSection_8h.html  Greenhouse_8cpp.html  Greenhouse_8h_source.html  GreetingCardDecorator_8h_source.html  GrowingState_8cpp_source.html  GrowingState_8h.html  GrowingState_8h_source.html  InventoryIterator_8cpp_source.html  InventoryIterator_8h.html  InventoryManager_8cpp.html  InventoryManager_8h.html  LandscapeArrangementBuilder_8cpp.html  LandscapeArrangementBuilder_8cpp_source.html  (+206 more)
(+152 files in other folders)
