cmake_minimum_required(VERSION 3.31)
project(COS_214_Project___NJD_Films)

set(CMAKE_CXX_STANDARD 20)

add_executable(COS_214_Project___NJD_Films main.cpp
        "Plant - Abstract Base/Plant.h"
        "Plant - Abstract Base/Cactus.h"
        "Plant - Abstract Base/Succulent.h"
        "Plant - Abstract Base/Rose.h"
        "Plant - Abstract Base/Baobab.h"
        "Plant - Abstract Base/Lavendar.h"
        "Template- Plant Care/PlantCareRoutine.h"
        "Template- Plant Care/SucculentCare.h"
        "Template- Plant Care/RoseCare.h"
        "Template- Plant Care/TreeCare.h"
        "Iterator - Inventory Management/PlantIterator.h"
        "Iterator - Inventory Management/InventoryIterator.h"
        "Iterator - Inventory Management/PlantCollection.h"
        "Iterator - Inventory Management/GreenhouseInventory.h"
        "Iterator - Inventory Management/InventoryManager.h"
        "Composite - The Store layout/GreenhouseComponent.h"
        "Composite - The Store layout/PlantLeaf.h"
        "Composite - The Store layout/Shelf.h"
        "Composite - The Store layout/GreenhouseSection.h"
        "Composite - The Store layout/Greenhouse.h"
        "Adapter - Legacy Watering System/ModernWateringSystem.h"
        "Adapter - Legacy Watering System/LegacyIrrigationSystem.h"
        "Adapter - Legacy Watering System/WateringAdapter.h"
        "Adapter - Legacy Watering System/GreenhouseController.h"
        "Command - Staff Functions/StaffCommand.h"
        "Command - Staff Functions/AssistCustomerCommand.h"
        "Command - Staff Functions/WaterPlantsCommand.h"
        "Command - Staff Functions/PrunePlantsCommand.h"
        "Command - Staff Functions/FertilizePlantsCommand.h"
        "Command - Staff Functions/StaffMember.h"
        "Command - Staff Functions/SalesStaff.h"
        "Command - Staff Functions/PlantCareStaff.h"
        "Command - Staff Functions/TaskScheduler.h"
        "Strategy - Watering Methods/PlantCareStrategy.h"
        "Strategy - Watering Methods/MinimalWatering .h"
        "Strategy - Watering Methods/ModerateWatering.h"
        "Strategy - Watering Methods/FrequentWatering.h"
        "Strategy - Watering Methods/PlantCareContext.h"
        "Factory - Plant Creation/PlantFactory.h"
        "Factory - Plant Creation/LavenderFactory.h"
        "Factory - Plant Creation/SucculentFactory.h"
        "Factory - Plant Creation/RoseFactory.h"
        "Factory - Plant Creation/CactusFactory.h"
        "Factory - Plant Creation/BaobabFactory.h"
        "Prototype - Plant Propogation/PlantPrototype.h"
        "Prototype - Plant Propogation/RosePrototype.h"
        "Prototype - Plant Propogation/SucculentPrototype.h"
        "Prototype - Plant Propogation/NurseryManager.h"
        "Decorator - Plant Decoration/PlantProduct.h"
        "Decorator - Plant Decoration/BasicPlant.h"
        "Decorator - Plant Decoration/PlantDecorator.h"
        "Decorator - Plant Decoration/DecorativePotDecorator.h"
        "Decorator - Plant Decoration/GiftWrappingDecorator.h"
        "Decorator - Plant Decoration/GreetingCardDecorator.h"
        "Builder - Plant Bundle Creator/PlantArrangement.h"
        "Builder - Plant Bundle Creator/PlantArrangementBuilder.h"
        "Builder - Plant Bundle Creator/GiftArrangementBuilder.h"
        "Builder - Plant Bundle Creator/LandscapeArrangementBuilder.h"
        "Builder - Plant Bundle Creator/ArrangementDirector.h"
        "State - Plant lifecycle/PlantState.h"
        "State - Plant lifecycle/DormantState.h"
        "State - Plant lifecycle/SeedlingState.h"
        "State - Plant lifecycle/MatureState.h"
        "State - Plant lifecycle/FloweringState.h"
        "State - Plant lifecycle/PlantContext.h")
