cmake_minimum_required(VERSION 3.31)
project(COS_214_Project___NJD_Films)

set(CMAKE_CXX_STANDARD 20)

add_executable(COS_214_Project___NJD_Films
        main.cpp
        "Plant - Abstract Base/Plant.h"
        "Plant - Abstract Base/Plant.cpp"
        "Plant - Abstract Base/Cactus.h"
        "Plant - Abstract Base/Succulent.h"
        "Plant - Abstract Base/Rose.h"
        "Plant - Abstract Base/Baobab.h"
        "Plant - Abstract Base/Lavendar.h"
        "Template- Plant Care/PlantCareRoutine.h"
        "Template- Plant Care/PlantCareRoutine.cpp"
        "Template- Plant Care/SucculentCare.h"
        "Template- Plant Care/SucculentCare.cpp"
        "Template- Plant Care/RoseCare.h"
        "Template- Plant Care/RoseCare.cpp"
        "Template- Plant Care/TreeCare.h"
        "Template- Plant Care/TreeCare.cpp"
        "Iterator - Inventory Management/PlantIterator.h"
        "Iterator - Inventory Management/InventoryIterator.h"
        "Iterator - Inventory Management/InventoryIterator.cpp"
        "Iterator - Inventory Management/PlantCollection.h"
        "Iterator - Inventory Management/GreenhouseInventory.h"
        "Iterator - Inventory Management/GreenhouseInventory.cpp"
        "Iterator - Inventory Management/InventoryManager.h"
        "Iterator - Inventory Management/InventoryManager.cpp"
        "Composite - The Store layout/GreenhouseComponent.h"
        "Composite - The Store layout/GreenhouseComponent.cpp"
        "Composite - The Store layout/PlantLeaf.h"
        "Composite - The Store layout/PlantLeaf.cpp"
        "Composite - The Store layout/Shelf.h"
        "Composite - The Store layout/Shelf.cpp"
        "Composite - The Store layout/GreenhouseSection.h"
        "Composite - The Store layout/GreenhouseSection.cpp"
        "Composite - The Store layout/Greenhouse.h"
        "Composite - The Store layout/Greenhouse.cpp"
        "Adapter - Legacy Watering System/ModernWateringSystem.h"
        "Adapter - Legacy Watering System/LegacyIrrigationSystem.h"
        "Adapter - Legacy Watering System/LegacyIrrigationSystem.cpp"
        "Adapter - Legacy Watering System/WateringAdapter.h"
        "Adapter - Legacy Watering System/WateringAdapter.cpp"
        "Adapter - Legacy Watering System/GreenhouseController.h"
        "Adapter - Legacy Watering System/GreenhouseController.cpp"
        "Command - Staff Functions/StaffCommand.h"
        "Command - Staff Functions/AssistCustomerCommand.h"
        "Command - Staff Functions/AssistCustomerCommand.cpp"
        "Command - Staff Functions/WaterPlantsCommand.h"
        "Command - Staff Functions/WaterPlantsCommand.cpp"
        "Command - Staff Functions/PrunePlantsCommand.h"
        "Command - Staff Functions/PrunePlantsCommand.cpp"
        "Command - Staff Functions/FertilizePlantsCommand.h"
        "Command - Staff Functions/FertilizePlantsCommand.cpp"
        "Command - Staff Functions/StaffMember.h"
        "Command - Staff Functions/StaffMember.cpp"
        "Command - Staff Functions/SalesStaff.h"
        "Command - Staff Functions/SalesStaff.cpp"
        "Command - Staff Functions/PlantCareStaff.h"
        "Command - Staff Functions/PlantCareStaff.cpp"
        "Command - Staff Functions/TaskScheduler.h"
        "Command - Staff Functions/TaskScheduler.cpp"
        "Strategy - Watering Methods/PlantCareStrategy.h"
        "Strategy - Watering Methods/MinimalWatering .h"
        "Strategy - Watering Methods/MinimalWatering.cpp"
        "Strategy - Watering Methods/ModerateWatering.h"
        "Strategy - Watering Methods/ModerateWatering.cpp"
        "Strategy - Watering Methods/FrequentWatering.h"
        "Strategy - Watering Methods/FrequentWatering.cpp"
        "Strategy - Watering Methods/PlantCareContext.h"
        "Strategy - Watering Methods/PlantCareContext.cpp"
        "Factory - Plant Creation/PlantFactory.h"
        "Factory - Plant Creation/LavenderFactory.h"
        "Factory - Plant Creation/LavenderFactory.cpp"
        "Factory - Plant Creation/SucculentFactory.h"
        "Factory - Plant Creation/SucculentFactory.cpp"
        "Factory - Plant Creation/RoseFactory.h"
        "Factory - Plant Creation/RoseFactory.cpp"
        "Factory - Plant Creation/CactusFactory.h"
        "Factory - Plant Creation/CactusFactory.cpp"
        "Factory - Plant Creation/BaobabFactory.h"
        "Factory - Plant Creation/BaobabFactory.cpp"
        "Prototype - Plant Propogation/PlantPrototype.h"
        "Prototype - Plant Propogation/RosePrototype.h"
        "Prototype - Plant Propogation/SucculentPrototype.h"
        "Prototype - Plant Propogation/NurseryManager.h"
        "Decorator - Plant Decoration/PlantProduct.h"
        "Decorator - Plant Decoration/BasicPlant.h"
        "Decorator - Plant Decoration/PlantDecorator.h"
        "Decorator - Plant Decoration/DecorativePotDecorator.h"
        "Decorator - Plant Decoration/GiftWrappingDecorator.h"
        "Decorator - Plant Decoration/GreetingCardDecorator.h"
        "Builder - Plant Bundle Creator/PlantArrangement.h"
        "Builder - Plant Bundle Creator/PlantArrangementBuilder.h"
        "Builder - Plant Bundle Creator/GiftArrangementBuilder.h"
        "Builder - Plant Bundle Creator/LandscapeArrangementBuilder.h"
        "Builder - Plant Bundle Creator/ArrangementDirector.h"
        "State - Plant lifecycle/PlantState.h"
        "State - Plant lifecycle/DormantState.h"
        "State - Plant lifecycle/DormantState.cpp"
        "State - Plant lifecycle/SeedlingState.h"
        "State - Plant lifecycle/SeedlingState.cpp"
        "State - Plant lifecycle/GrowingState.h"
        "State - Plant lifecycle/GrowingState.cpp"
        "State - Plant lifecycle/MatureState.h"
        "State - Plant lifecycle/MatureState.cpp"
        "State - Plant lifecycle/FloweringState.h"
        "State - Plant lifecycle/FloweringState.cpp"
        "State - Plant lifecycle/PlantContext.h"
        "Decorator - Plant Decoration/PlantProduct.cpp"
        "Decorator - Plant Decoration/BasicPlant.cpp"
        "Decorator - Plant Decoration/PlantDecorator.cpp"
        "Decorator - Plant Decoration/DecorativePotDecorator.cpp"
        "Decorator - Plant Decoration/GiftWrappingDecorator.cpp"
        "Decorator - Plant Decoration/GreetingCardDecorator.cpp"
        "Builder - Plant Bundle Creator/PlantArrangement.cpp"
        "Builder - Plant Bundle Creator/PlantArrangementBuilder.cpp"
        "Builder - Plant Bundle Creator/GiftArrangementBuilder.cpp"
        "Builder - Plant Bundle Creator/LandscapeArrangementBuilder.cpp"
        "Builder - Plant Bundle Creator/ArrangementDirector.cpp"
)

# Add second executable for comprehensive greenhouse simulation
add_executable(GreenhouseSimulation
        greenhouse_simulation.cpp
        "Plant - Abstract Base/Plant.h"
        "Plant - Abstract Base/Plant.cpp"
        "Plant - Abstract Base/Cactus.h"
        "Plant - Abstract Base/Succulent.h"
        "Plant - Abstract Base/Rose.h"
        "Plant - Abstract Base/Baobab.h"
        "Plant - Abstract Base/Lavendar.h"
        "Factory - Plant Creation/PlantFactory.h"
        "Factory - Plant Creation/RoseFactory.h"
        "Factory - Plant Creation/RoseFactory.cpp"
        "Factory - Plant Creation/CactusFactory.h"
        "Factory - Plant Creation/CactusFactory.cpp"
        "Factory - Plant Creation/SucculentFactory.h"
        "Factory - Plant Creation/SucculentFactory.cpp"
        "Factory - Plant Creation/LavenderFactory.h"
        "Factory - Plant Creation/LavenderFactory.cpp"
        "Factory - Plant Creation/BaobabFactory.h"
        "Factory - Plant Creation/BaobabFactory.cpp"
        "Prototype - Plant Propogation/PlantPrototype.h"
        "Prototype - Plant Propogation/RosePrototype.h"
        "Prototype - Plant Propogation/SucculentPrototype.h"
        "Composite - The Store layout/GreenhouseComponent.h"
        "Composite - The Store layout/GreenhouseComponent.cpp"
        "Composite - The Store layout/Greenhouse.h"
        "Composite - The Store layout/Greenhouse.cpp"
        "Composite - The Store layout/GreenhouseSection.h"
        "Composite - The Store layout/GreenhouseSection.cpp"
        "Composite - The Store layout/Shelf.h"
        "Composite - The Store layout/Shelf.cpp"
        "Composite - The Store layout/PlantLeaf.h"
        "Composite - The Store layout/PlantLeaf.cpp"
        "Iterator - Inventory Management/PlantIterator.h"
        "Iterator - Inventory Management/InventoryIterator.h"
        "Iterator - Inventory Management/InventoryIterator.cpp"
        "Iterator - Inventory Management/PlantCollection.h"
        "Iterator - Inventory Management/GreenhouseInventory.h"
        "Iterator - Inventory Management/GreenhouseInventory.cpp"
        "Template- Plant Care/PlantCareRoutine.h"
        "Template- Plant Care/RoseCare.h"
        "Template- Plant Care/SucculentCare.h"
        "Template- Plant Care/TreeCare.h"
        "Template- Plant Care/PlantCareRoutine.cpp"
        "Template- Plant Care/RoseCare.cpp"
        "Template- Plant Care/SucculentCare.cpp"
        "Template- Plant Care/TreeCare.cpp"
        "Strategy - Watering Methods/PlantCareStrategy.h"
        "Strategy - Watering Methods/FrequentWatering.h"
        "Strategy - Watering Methods/FrequentWatering.cpp"
        "Strategy - Watering Methods/MinimalWatering .h"
        "Strategy - Watering Methods/MinimalWatering.cpp"
        "Strategy - Watering Methods/ModerateWatering.h"
        "Strategy - Watering Methods/ModerateWatering.cpp"
        "Strategy - Watering Methods/PlantCareContext.h"
        "Strategy - Watering Methods/PlantCareContext.cpp"
        "State - Plant lifecycle/PlantState.h"
        "State - Plant lifecycle/SeedlingState.h"
        "State - Plant lifecycle/SeedlingState.cpp"
        "State - Plant lifecycle/GrowingState.h"
        "State - Plant lifecycle/GrowingState.cpp"
        "State - Plant lifecycle/MatureState.h"
        "State - Plant lifecycle/MatureState.cpp"
        "State - Plant lifecycle/FloweringState.h"
        "State - Plant lifecycle/FloweringState.cpp"
        "State - Plant lifecycle/DormantState.h"
        "State - Plant lifecycle/DormantState.cpp"
        "State - Plant lifecycle/PlantContext.h"
        "Adapter - Legacy Watering System/LegacyIrrigationSystem.h"
        "Adapter - Legacy Watering System/LegacyIrrigationSystem.cpp"
        "Adapter - Legacy Watering System/ModernWateringSystem.h"
        "Adapter - Legacy Watering System/WateringAdapter.h"
        "Adapter - Legacy Watering System/WateringAdapter.cpp"
        "Adapter - Legacy Watering System/GreenhouseController.h"
        "Adapter - Legacy Watering System/GreenhouseController.cpp"
        "Command - Staff Functions/StaffCommand.h"
        "Command - Staff Functions/WaterPlantsCommand.h"
        "Command - Staff Functions/WaterPlantsCommand.cpp"
        "Command - Staff Functions/FertilizePlantsCommand.h"
        "Command - Staff Functions/FertilizePlantsCommand.cpp"
        "Command - Staff Functions/PrunePlantsCommand.h"
        "Command - Staff Functions/PrunePlantsCommand.cpp"
        "Command - Staff Functions/AssistCustomerCommand.h"
        "Command - Staff Functions/AssistCustomerCommand.cpp"
        "Command - Staff Functions/StaffMember.h"
        "Command - Staff Functions/StaffMember.cpp"
        "Command - Staff Functions/PlantCareStaff.h"
        "Command - Staff Functions/PlantCareStaff.cpp"
        "Command - Staff Functions/SalesStaff.h"
        "Command - Staff Functions/SalesStaff.cpp"
        "Command - Staff Functions/TaskScheduler.h"
        "Command - Staff Functions/TaskScheduler.cpp"
        "Decorator - Plant Decoration/PlantProduct.h"
        "Decorator - Plant Decoration/PlantProduct.cpp"
        "Decorator - Plant Decoration/BasicPlant.h"
        "Decorator - Plant Decoration/BasicPlant.cpp"
        "Decorator - Plant Decoration/PlantDecorator.h"
        "Decorator - Plant Decoration/PlantDecorator.cpp"
        "Decorator - Plant Decoration/DecorativePotDecorator.h"
        "Decorator - Plant Decoration/DecorativePotDecorator.cpp"
        "Decorator - Plant Decoration/GiftWrappingDecorator.h"
        "Decorator - Plant Decoration/GiftWrappingDecorator.cpp"
        "Decorator - Plant Decoration/GreetingCardDecorator.h"
        "Decorator - Plant Decoration/GreetingCardDecorator.cpp"
        "Builder - Plant Bundle Creator/PlantArrangement.h"
        "Builder - Plant Bundle Creator/PlantArrangement.cpp"
        "Builder - Plant Bundle Creator/PlantArrangementBuilder.h"
        "Builder - Plant Bundle Creator/PlantArrangementBuilder.cpp"
        "Builder - Plant Bundle Creator/GiftArrangementBuilder.h"
        "Builder - Plant Bundle Creator/GiftArrangementBuilder.cpp"
        "Builder - Plant Bundle Creator/LandscapeArrangementBuilder.h"
        "Builder - Plant Bundle Creator/LandscapeArrangementBuilder.cpp"
        "Builder - Plant Bundle Creator/ArrangementDirector.h"
        "Builder - Plant Bundle Creator/ArrangementDirector.cpp"
)
